--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,32 @@
+CHANGES IN VERSION 1.0.4
+------------------------
+
+o updated or fixed the following functions:
+
+   + BSprepare: fixed the problem of chromosome name with numeric values
+   + updated all examples with updated tabix indexed files
+   + updated vignette
+  
+
+CHANGES IN VERSION 1.0.3
+------------------------
+
+o updated or fixed the following functions:
+
+   + BSprepare: fixed the problem of unsorted files
+   + BSprepare: fixed the problem of methylation files with numeric chromosome name
+   + methstats: Added a new function to provide descriptive statistics of methylation data
+  
+
+
+CHANGES IN VERSION 1.0.2
+------------------------
+
+o updated or fixed the following functions:
+
+   + profileDNAmetBinParallel
+   + updated R version dependency information
+
 CHANGES IN VERSION 1.0.0
 ------------------------
  o initial version with the following functions implemented:
